Closed Bug 756632 Opened 13 years ago Closed 13 years ago

IonMonkey OOM Testing: Assertion failure: frame.stackDepth() == opinfo->stackDepth, at js/src/methodjit/Compiler.cpp:2146

Categories

(Core :: JavaScript Engine, defect)

Other Branch
x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla15

People

(Reporter: decoder, Assigned: jandem)

References

Details

(Keywords: assertion, testcase)

Attachments

(1 file)

The following command asserts on ionmonkey revision 8c54899dae82 (dbg build): js -e 'const libdir = "js/src/jit-test/lib/";' -A 14620 -f js/src/jit-test/tests/sunspider/check-mont.js
Still valid with ballast patch, new -A value for revision 88ea2e529609 is 10450.
JM bug. The patch propagates OOM from TypeObject::getProperty in jsop_getgname and jsop_setgname. This matches jsop_getprop and jsop_setprop.
Assignee: general → jdemooij
Status: NEW → ASSIGNED
Attachment #625953 - Flags: review?(bhackett1024)
Summary: IonMonkey: OOM Testing: Assertion failure: frame.stackDepth() == opinfo->stackDepth, at js/src/methodjit/Compiler.cpp:2146 → OOM Testing: Assertion failure: frame.stackDepth() == opinfo->stackDepth, at js/src/methodjit/Compiler.cpp:2146
Thanks for fixing it anyway :)
Summary: OOM Testing: Assertion failure: frame.stackDepth() == opinfo->stackDepth, at js/src/methodjit/Compiler.cpp:2146 → JS OOM Testing: Assertion failure: frame.stackDepth() == opinfo->stackDepth, at js/src/methodjit/Compiler.cpp:2146
Summary: JS OOM Testing: Assertion failure: frame.stackDepth() == opinfo->stackDepth, at js/src/methodjit/Compiler.cpp:2146 → IonMonkey OOM Testing: Assertion failure: frame.stackDepth() == opinfo->stackDepth, at js/src/methodjit/Compiler.cpp:2146
Attachment #625953 - Flags: review?(bhackett1024) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: