Bug 756632 - Handle OOM in methodjit jsop_getgname/jsop_setgname methods. r=bhackett